@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject()
    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedX():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# axHp:int
    # hp:int
    # power:int
    # direction:int
    # shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + increaseHp(int increase):void
    + getHp():int
    + setHp(int):void
    + setMaxHp(int):void
    + getPower():int
    + setPower(int):void
    + getDirection():int
    + getShootStrategy():ShootStrategy
    + setShootStrategy(ShootStrategy):void
    + shoot():List<BaseBullet>
}

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
}

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet

AbstractAircraft <|-- HeroAircraft
AbstractAircraft <|-- AbstractEnemy

BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet

class HeroAircraft {
    - {static} instance:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance():HeroAircraft
    + forward():void
    + resetLocation():void
}

abstract class AbstractEnemy {
    + AbstractEnemy(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + {abstract} getScore():int
}

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- EliteEnemy
AbstractEnemy <|-- BossEnemy

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY)
    + getScore():int
}

class EliteEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY)
    + getScore():int
}

class BossEnemy {
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + getScore():int
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY, int speedX, int speedY, int power)
}

abstract class AbstractProp {
    + AbstractProp(int locationX, int locationY)
    + forward():void
    + work(AbstractAircraft aircraft):void
    + work():int
}

class LifeProp {
    + LifeProp(int locationX, int locationY)
    + work(AbstractAircraft aircraft):void
}

class BombProp {
    - subscribers:List<AbstractFlyingObject>
    + BombProp(int locationX, int locationY)
    + work():int
    + addSubscriber(AbstractFlyingObject):void
    + notifySubscribers():void
}

class FireProp {
    + BombProp(int locationX, int locationY)
    + work(AbstractAircraft aircraft):void
}

AbstractFlyingObject <|-- AbstractProp

AbstractProp <|-- LifeProp
AbstractProp <|-- BombProp
AbstractProp <|-- FireProp

@enduml